syntax = "proto3";
import "ast/pc.proto";

package ast_mutate;

message Mutation {
  oneof inner {

    // Node specific
    AppendChild append_child = 1;
    PrependChild prepend_child = 23;
    DeleteChild delete_child = 2;
    InsertChild insert_child = 3;
    ConvertToComponent convert_to_component = 14;
    WrapInElement wrap_in_element = 19;
    ConvertToSlot convert_to_slot = 15;
    SetTagName set_tag_name = 20;
    MoveNode move_node = 18;
    DetachInstance detach_instance = 30;

    // Element
    SetElementParameter set_element_parameter = 4;
    SetFrameBounds set_frame_bounds = 6;

    // Text
    SetTextNodeValue set_text_node_value = 8;

    // Style
    SetStyleDeclarations set_style_declarations = 5;
    SetStyleDeclarationValue set_style_declaration_value = 24;
    SetStyleMixins set_style_mixins = 22;

    // General
    DeleteExpression delete_expression = 11;
    SetId set_id = 16;
    MoveExpressionToFile move_expression_to_file = 26;
    AddImport add_import = 27;

    // Instance
    ToggleInstanceVariant toggle_instance_variant = 13;

    // Component
    UpdateVariant update_variant = 12;

    // Trigger
    UpdateTrigger update_trigger = 28;

    // Module
    UpdateDependencyPath update_dependency_path = 25;

    SaveComponentScript save_component_script = 29;
  }
}

message DetachInstance {
    string instance_id = 1;
    repeated string variant_ids = 2;
}

message SaveComponentScript {
    string component_id = 1;
    optional string script_id = 2;
    string src = 3;
    string target = 4;
    string name = 5;
}

message AddImport {
  string ns = 1;
  string path = 2;
}

message WrapInElement {
  string target_id = 1;
}

message SetTagName {
  string tag_name = 1;
  string element_id = 2;
  optional string tag_file_path = 3;
}

enum NodePosition {
  BEFORE = 0;
  AFTER = 1;
  INSIDE = 2;
}

message MoveExpressionToFile {
    string expression_id = 1;
    string new_file_path = 2;
}

message UpdateDependencyPath {
  string old_path = 1;
  string new_path = 2;
}

message MoveNode {
  NodePosition position = 1;
  string target_id = 2;
  string node_id = 3;
}

// result after mutation
message MutationResult {
  oneof inner {
    ExpressionInserted expression_inserted = 1;
    ExpressionUpdated expression_updated = 2;
    ExpressionDeleted expression_deleted = 3;
  }
}

message ToggleInstanceVariant {
  string instance_id = 1;
  string variant_id = 2;
  repeated string combo_variant_ids = 3;
}

message UpdateVariant {
  string component_id = 1;
  optional string variant_id = 2;
  string name = 3;
  repeated UpdateVariantTrigger triggers = 4;
}


message UpdateTrigger {
  string trigger_id = 1;
  repeated UpdateVariantTrigger triggers = 2;
}

message UpdateVariantTrigger {
  oneof inner {
    string str = 1;
    bool bool = 2;
    TriggerReference reference = 3;
  }
}

message TriggerReference {
  string source_path = 1;
  string name = 2;
}

message ExpressionInserted {
  string id = 1;
}

message ExpressionDeleted {
  string id = 1;
}

message ExpressionUpdated {
  string id = 1;
}

message AppendChild {
  string parent_id = 1;
  string child_source = 2;
}

message PrependChild {
  string parent_id = 1;
  string child_source = 2;
}

message DeleteExpression {
  string expression_id = 1;
}

message ConvertToComponent {
  string expression_id = 1;
  optional string name = 2;
}

message SetId {
  string expression_id = 1;
  string value = 2;
}

message ConvertToSlot {
  string expression_id = 1;
  string name = 2;
}

message DeleteChild {
  string node_id = 1;
}

message SetFrameBounds {
  string frame_id = 1;
  Bounds bounds = 2;
}

message Bounds {
  float x = 1;
  float y = 2;
  float width = 3;
  float height = 4;
}

message InsertChild {
  string before_id = 1;
  string child_source = 2;
}

message SetElementParameter {
  string target_id = 1;
  optional string parameter_id = 2;
  string parameter_name = 3;
  string parameter_value = 4;
}

message AppendInsert {
  string instance_id = 1;
  string slot_name = 2;
  string child_source = 3;
}


message SetTextNodeValue {
  string text_node_id = 1;
  string value = 2;
}

message SetStyleDeclarationValue {
  map<string, string> imports = 3;
  string target_id = 1;
  string value = 2;

}

message SetStyleDeclaration {
  map<string, string> imports = 3;
  string name = 1;
  string value = 2;
}

message SetStyleDeclarations {
  string expression_id = 1;
  repeated string variant_ids = 2;
  repeated SetStyleDeclaration declarations = 3;
}

message SetStyleMixins {
  string target_expr_id = 1;
  repeated string mixin_ids = 2;
  repeated string variant_ids = 3;
}
